--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
     "workbox-webpack-plugin": "^6.1.5",
     "workbox-window": "^6.1.5"
   },
+  "peerDependencies": {
+    "webpack": "^5.35.0"
+  },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^6.4.1",
     "@types/jest": "^26.0.15",
@@ -51,8 +54,7 @@
     "jest": "^26.6.3",
     "prettier": "^2.1.1",
     "prettier-package-json": "^2.1.3",
-    "typescript": "^4.1.3",
-    "webpack": "^5.35.0"
+    "typescript": "^4.1.3"
   },
   "keywords": [
     "offline",
