--- a/examples/react-example/package.json
+++ b/examples/react-example/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/react-dom": "^17.0.3",
-    "service-worker-webpack-plugin": "^0.0.1",
+    "service-worker-webpack": "^0.0.1",
     "ts-loader": "^9.0.0",
     "typescript": "^4.2.4",
     "webpack": "^5.34.0",
