--- a/package.json
+++ b/package.json
@@ -33,18 +33,19 @@
   },
   "types": "dist/index.d.ts",
   "dependencies": {
-    "copy-webpack-plugin": "^6.4.0",
+    "copy-webpack-plugin": "^6.4.1",
     "schema-utils": "^3.0.0",
     "workbox-webpack-plugin": "^6.1.5",
     "workbox-window": "^6.1.5"
   },
   "peerDependencies": {
-    "webpack": "^5.35.0"
+    "webpack": "^4.41.26"
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^6.4.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^13.13.5",
+    "@types/webpack": "^4.41.26",
     "@types/workbox-webpack-plugin": "^5.1.6",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
