--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "workbox-window": "^6.1.5"
   },
   "peerDependencies": {
-    "webpack": "^4.41.26"
+    "webpack": "^4.37.0 || ^5.9.0"
   },
   "devDependencies": {
     "@types/copy-webpack-plugin": "^6.4.1",
