--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "copy-webpack-plugin": "^6.4.1",
     "schema-utils": "^3.0.0",
+    "webpack-inject-entry-plugin": "^0.0.2",
     "workbox-webpack-plugin": "^6.1.5",
     "workbox-window": "^6.1.5"
   },
