--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "bugs": {
     "url": "https://github.com/tatethurston/next-service-worker/issues"
   },
-  "version": "0.0.9",
+  "version": "0.0.9-alpha.0",
   "main": "dist/index.js",
   "files": [
     "dist/*.js",
