--- a/examples/react-example/package.json
+++ b/examples/react-example/package.json
@@ -4,21 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "cd dist && python -m SimpleHTTPServer",
+    "start": "pnpm webpack && pnpm serve",
+    "serve": "cd dist && python3 -m http.server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tate Thurston <tatethurston@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@types/react-dom": "^17.0.3",
-    "service-worker-webpack": "0.0.9-alpha.1",
-    "ts-loader": "^9.0.0",
-    "typescript": "^4.2.4",
-    "webpack": "^5.34.0",
-    "webpack-cli": "^4.6.0"
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
+    "service-worker-webpack": "workspace:1.0.1",
+    "ts-loader": "^9.4.2",
+    "typescript": "^5.0.3",
+    "webpack": "^5.77.0",
+    "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
