--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "service-worker-webpack",
+  "name": "service-worker-webpack-dev",
+  "version": "0.0.1",
   "description": "A Webpack Plugin to generate a Service Worker. Powered by Workbox",
   "license": "MIT",
   "author": "Tate <tatethurston@gmail.com>",
@@ -11,64 +12,44 @@
   "bugs": {
     "url": "https://github.com/tatethurston/service-worker-webpack/issues"
   },
-  "version": "0.0.11",
-  "main": "dist/index.js",
-  "files": [
-    "dist/*.js",
-    "dist/index.d.ts"
-  ],
   "scripts": {
-    "build": "yarn clean && yarn tsc",
-    "build:watch": "yarn clean && yarn tsc --watch",
-    "clean": "rm -rf dist/*",
-    "lint:fix": "yarn lint:fix:md && yarn lint:fix:package && yarn lint:fix:ts && prettier --write ./src && yarn typecheck",
-    "lint:fix:md": "prettier --write *.md",
-    "lint:fix:package": "prettier-package-json --write ./package.json",
-    "lint:fix:ts": "eslint --fix './src/**/*.ts{,x}'",
-    "prepack": "yarn run build",
-    "test": "yarn build && jest --testTimeout 5000 --rootDir dist",
-    "typecheck": "yarn tsc --noEmit",
-    "typecheck:watch": "yarn typecheck --watch",
-    "postversion": "git add --all package.json && git push && git push --tags"
+    "build": "tsc",
+    "clean": "rm -rf dist",
+    "lint": "npm run typecheck && prettier --check . && prettier-package-json --list-different '{,example/,}package.json' && eslint .",
+    "lint:fix": "prettier --write . && prettier-package-json --write '{,example/}package.json' && eslint --fix .",
+    "package:build": "npm run clean && npm run build && npm run package:prune && npm run package:copy:files",
+    "package:copy:files": "cp ./LICENSE ./README.md dist/ && cp ./public.package.json dist/package.json",
+    "package:prune": "find dist -name test.* -delete",
+    "prepare": "husky install",
+    "test": "jest",
+    "test:ci": "jest --coverage",
+    "typecheck": "tsc --noEmit"
   },
-  "types": "dist/index.d.ts",
   "dependencies": {
-    "copy-webpack-plugin": "^6.4.1",
-    "schema-utils": "^3.0.0",
-    "webpack-inject-entry-plugin": "^0.0.2",
-    "workbox-webpack-plugin": "^6.1.5",
-    "workbox-window": "^6.1.5"
+    "copy-webpack-plugin": "^11.0.0",
+    "schema-utils": "^4.0.0",
+    "webpack-inject-entry-plugin": "^0.0.4",
+    "workbox-build": "^6.5.4",
+    "workbox-webpack-plugin": "^6.5.4",
+    "workbox-window": "^6.5.4"
   },
   "peerDependencies": {
     "webpack": "^4.37.0 || ^5.9.0"
   },
   "devDependencies": {
-    "@types/copy-webpack-plugin": "^6.4.1",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^13.13.5",
-    "@types/webpack": "^4.41.26",
-    "@types/workbox-webpack-plugin": "^5.1.6",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
-    "eslint": "^7.8.1",
-    "eslint-config-prettier": "^8.1.0",
-    "husky": "^4.3.0",
-    "jest": "^26.6.3",
-    "prettier": "^2.1.1",
-    "prettier-package-json": "^2.1.3",
-    "typescript": "^4.1.3"
+    "@types/copy-webpack-plugin": "^10.1.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/webpack": "^5.28.1",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "prettier": "^2.8.7",
+    "prettier-package-json": "^2.8.0",
+    "typescript": "^5.0.3"
   },
-  "keywords": [
-    "offline",
-    "plugin",
-    "pwa",
-    "service worker",
-    "webpack",
-    "workbox"
-  ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "yarn lint:fix"
-    }
-  }
+  "packageManager": "pnpm@7.17.0"
 }
