--- a/examples/react-example/package.json
+++ b/examples/react-example/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "html-webpack-plugin": "^5.5.0",
     "service-worker-webpack": "workspace:1.0.1",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.3",
